# CppModulesExamples

./: .gitignore  Makefile  README.md
cmake/: build_with_clang_9_0_1.sh
cmake_2023/: CMakeLists.txt  README.md  build_with_clang_16_0_6_cmake_27_7.sh
